unpackaged/objects/Adam_Child__c.object
<CustomObject>
	<fields>
		<fullName>Parent_Link__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Adam Bar</label>
		<referenceTo>Adam_Bar__c</referenceTo>
		<relationshipLabel>Adam Childs</relationshipLabel>
		<relationshipName>Adam_Childs</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Text_Area_Long__c</fullName>
		<label>Text Area Long</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Text_Area_Rich__c</fullName>
		<label>Text Area Rich</label>
		<length>32768</length>
		<type>Html</type>
	</fields>
	<fields>
		<fullName>Text_Area__c</fullName>
		<label>Text Area</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>formula_test__c</fullName>
		<formula>&quot;adam bar parent: &quot; + Parent_Link__r.another_field__c + &quot; the link...&quot;</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>formula_test</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>metazoa_external_id__c</fullName>
		<externalId>true</externalId>
		<label>metazoa_external_id</label>
		<length>200</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>text__c</fullName>
		<label>text</label>
		<length>200</length>
		<type>Text</type>
	</fields>
	<label>Adam Child</label>
	<nameField>
		<label>Adam Child Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Adam Childs</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>